--- a/call-logs.html
+++ b/call-logs.html
@@ -15,7 +15,7 @@
         <!-- Header -->
         <header class="py-4 px-5 md:px-10 xl:hidden flex items-center justify-between">
             <a href="/">
-                <img src="/images/logo.svg" alt="Logo" class="relative z-11 w-[9rem] dark:brightness-[1.5]">
+                <img src="/images/logo.svg" alt="Logo" class="relative z-11 w-[9rem] dark:brightness-[2]">
             </a>
             <button class="sidebar-toggle p-2 dark:text-white hover:bg-gray-200 dark:hover:bg-black transition-all transition-duration-500 rounded focus:outline-none ms-3">
                 <!-- Hamburger Icon -->
@@ -38,7 +38,7 @@
                 <div class="flex items-center justify-between p-4 sidebar-header">
                     <div class="flex items-center space-x-2">
                         <a class="hidden md:inline" href="index.html">
-                            <img src="/images/logo.svg" alt="Logo" class="w-[9rem] sidebar__logo-icon hide-on-collapse dark:brightness-[1.5]">
+                            <img src="/images/logo.svg" alt="Logo" class="w-[9rem] sidebar__logo-icon hide-on-collapse dark:brightness-[2]">
                             <img class="hidden sidebar__logo-icon hide-on-collapse" src="/images/logo-icon.svg"
                                 alt="Logo">
                         </a>
@@ -68,7 +68,7 @@
                     <h6 class="sidebar__menu-text font-bold text-dark dark:text-white ps-3 opacity-50 mb-3 uppercase text-sm">Menu</h6>
 
                     <!-- Home Link -->
-                    <a href="index.html" class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3">
+                    <a href="/" class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3">
                         <!-- Replace with your home icon -->
                         <svg width="20" height="20" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g opacity="0.5">
@@ -136,7 +136,7 @@
 
                             <span
                                 class="ml-3 sidebar-text hide-on-collapse flex-1 text-left text-black dark:text-white opacity-50">Settings</span>
-                            <svg class="sidebar-arrow" width="13" height="9" viewBox="0 0 13 9" fill="none"
+                            <svg class="sidebar-arrow transition-all transition-duration-500" width="13" height="9" viewBox="0 0 13 9" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M11.3296 0.32959L6.49996 5.15921L1.67034 0.32959L0.0795898 1.92034L6.49996 8.34071L12.9203 1.92034L11.3296 0.32959Z"
@@ -162,6 +162,10 @@
                                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black dark:text-white opacity-50">
                                 Voice Collection
                             </a>
+                            <a href="account.html"
+                class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black dark:text-white opacity-50">
+                Account
+              </a>
                         </div>
                     </div>
 
@@ -229,14 +233,14 @@
                 <!-- Example content header -->
                 <header class="mb-4 lg:mb-6 lg:mt-20 mt-10 relative flex align-center justify-between">
                     <div></div>
-                    <h2 class="text-3xl text-center text-primary font-bold">Call Logs</h2>
+                    <h1 class="text-3xl text-center text-primary font-bold">Call Logs</h1>
 
                     <!-- Filters -->
                     <div class="relative filter-dropdown">
 
                         <!-- Filter Button -->
                         <div
-                            class="filter-dropdown__button bg-secondary text-sm text-white py-2 px-3 flex justify-between items-center rounded-full gap-4 cursor-pointer ">
+                            class="dropdown__button bg-secondary text-sm text-white py-2 px-3 flex justify-between items-center rounded-full gap-4 cursor-pointer ">
                             <svg width="20" height="19" viewBox="0 0 26 25" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -244,7 +248,7 @@
                                     fill="white" />
                             </svg>
                             <span class="font-bold me-3">All Filter</span>
-                            <svg width="13" height="9" viewBox="0 0 13 9" fill="none"
+                            <svg class="dropdown__arrow transition-all transition-duration" width="13" height="9" viewBox="0 0 13 9" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M11.3296 0.32959L6.49996 5.15921L1.67034 0.32959L0.0795898 1.92034L6.49996 8.34071L12.9203 1.92034L11.3296 0.32959Z"
@@ -255,7 +259,7 @@
 
                         <!-- Filter Dropdown -->
                         <div
-                            class="filter-dropdown__menu hidden w-full absolute bg-secondary rounded-lg mt-3 text-white border-s border-e border-b border-white border-solid">
+                            class="dropdown__menu hidden w-full absolute bg-secondary rounded-lg mt-3 text-white border-s border-e border-b border-white border-solid">
                             <div
                                 class="py-2 px-3 border-t border-white border-solid cursor-pointer rounded-t-lg hover:bg-secondary-300 transition duration-200">
                                 Filter 1</div>
