--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <!-- Header -->
     <header class="py-4 px-5 md:px-10 xl:hidden flex items-center justify-between">
       <a href="/">
-        <img src="/images/logo.svg" alt="Logo" class="relative z-11 w-[9rem] dark:brightness-[1.5]">
+        <img src="/images/logo.svg" alt="Logo" class="relative z-11 w-[9rem] dark:brightness-[2]">
       </a>
-      <button class="sidebar-toggle p-2 dark:text-white hover:bg-gray-200 dark:hover:bg-black transition-all transition-duration-500 rounded focus:outline-none ms-3">
+      <button
+        class="sidebar-toggle p-2 dark:text-white hover:bg-gray-200 dark:hover:bg-black transition-all transition-duration-500 rounded focus:outline-none ms-3">
         <!-- Hamburger Icon -->
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
           stroke-width="2">
@@ -40,7 +41,8 @@
         <div class="flex items-center justify-between p-4 sidebar-header">
           <div class="flex items-center space-x-2">
             <a class="hidden xl:inline" href="index.html">
-              <img src="/images/logo.svg" alt="Logo" class="w-[9rem] sidebar__logo-icon hide-on-collapse dark:brightness-[1.5]">
+              <img src="/images/logo.svg" alt="Logo"
+                class="w-[9rem] sidebar__logo-icon hide-on-collapse dark:brightness-[2]">
             </a>
           </div>
           <div class="sidebar-toggle xl:hidden text-3xl">&times;</div>
@@ -64,10 +66,11 @@
         <!-- NAVIGATION -->
         <nav class="flex flex-col px-2 mt-4 text-primary">
 
-          <h6 class="sidebar__menu-text font-bold text-dark dark:text-white ps-3 opacity-50 mb-3 uppercase text-sm">Menu</h6>
+          <h6 class="sidebar__menu-text font-bold text-dark dark:text-white ps-3 opacity-50 mb-3 uppercase text-sm">Menu
+          </h6>
 
           <!-- Home Link -->
-          <a href="index.html" class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3 bg-gray-100">
+          <a href="/" class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3 bg-gray-100">
             <!-- Replace with your home icon -->
             <svg width="20" height="20" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g opacity="0.5">
@@ -129,8 +132,10 @@
                 </defs>
               </svg>
 
-              <span class="ml-3 sidebar-text hide-on-collapse flex-1 text-left text-black dark:text-white opacity-50">Settings</span>
-              <svg class="sidebar-arrow" width="13" height="9" viewBox="0 0 13 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <span
+                class="ml-3 sidebar-text hide-on-collapse flex-1 text-left text-black dark:text-white opacity-50">Settings</span>
+              <svg class="sidebar-arrow transition-all transition-duration-500" width="13" height="9" viewBox="0 0 13 9" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M11.3296 0.32959L6.49996 5.15921L1.67034 0.32959L0.0795898 1.92034L6.49996 8.34071L12.9203 1.92034L11.3296 0.32959Z"
                   fill="#a4a4a4" />
@@ -154,6 +159,10 @@
               <a href="voice-collection.html"
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black dark:text-white opacity-50">
                 Voice Collection
+              </a>
+              <a href="account.html"
+                class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black dark:text-white opacity-50">
+                Account
               </a>
             </div>
           </div>
@@ -207,7 +216,7 @@
       <!-- Example content header -->
       <header class="mb-6 relative md:flex-row flex-col flex justify-between lg:items-center">
         <div class="left-col">
-          <h2 class="text-3xl lg:text-3xl text-primary font-bold mb-2">Home</h2>
+          <h1 class="text-3xl lg:text-3xl text-primary font-bold mb-2">Home</h1>
           <p class="text-lg mb-3 md:mb-0">Welcome back <span class="font-bold">User!</span></p>
         </div>
         <div class="mb-3 md:mb-6 flex justify-center p-[2px] border-black border rounded-lg overflow-hidden">
@@ -537,14 +546,14 @@
 
               <!-- Filter Button -->
               <div
-                class="filter-dropdown__button bg-secondary text-sm text-white py-2 px-3 flex justify-between items-center rounded-full gap-4 cursor-pointer ">
+                class="dropdown__button bg-secondary text-sm text-white py-2 px-3 flex justify-between items-center rounded-full gap-4 cursor-pointer ">
                 <svg width="20" height="19" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M1.71521 4.40708H13.1694C13.5147 6.03887 14.9179 7.26392 16.5914 7.26392C18.265 7.26392 19.6682 6.03892 20.0134 4.40708H24.2846C24.7001 4.40708 25.037 4.05728 25.037 3.62583C25.037 3.19438 24.7001 2.84458 24.2846 2.84458H20.0131C19.6672 1.21362 18.262 -0.012207 16.5914 -0.012207C14.92 -0.012207 13.5155 1.21343 13.1697 2.84458H1.71521C1.29974 2.84458 0.962891 3.19438 0.962891 3.62583C0.962891 4.05728 1.29974 4.40708 1.71521 4.40708ZM14.5928 3.62788C14.5928 3.6251 14.5929 3.62227 14.5929 3.61948C14.5962 2.47852 15.4927 1.55034 16.5914 1.55034C17.6886 1.55034 18.5852 2.47725 18.59 3.61768L18.5901 3.62915C18.5884 4.77207 17.6924 5.70146 16.5914 5.70146C15.4909 5.70146 14.5953 4.773 14.5928 3.63076L14.5928 3.62788ZM24.2846 20.5927H20.0131C19.6671 18.9618 18.262 17.7359 16.5914 17.7359C14.92 17.7359 13.5155 18.9616 13.1697 20.5927H1.71521C1.29974 20.5927 0.962891 20.9424 0.962891 21.3739C0.962891 21.8054 1.29974 22.1552 1.71521 22.1552H13.1694C13.5147 23.787 14.9179 25.012 16.5914 25.012C18.265 25.012 19.6682 23.787 20.0134 22.1552H24.2846C24.7001 22.1552 25.037 21.8054 25.037 21.3739C25.037 20.9424 24.7001 20.5927 24.2846 20.5927ZM16.5914 23.4495C15.4909 23.4495 14.5953 22.521 14.5928 21.3788L14.5928 21.376C14.5928 21.3731 14.5929 21.3704 14.5929 21.3676C14.5962 20.2266 15.4927 19.2984 16.5914 19.2984C17.6886 19.2984 18.5852 20.2253 18.59 21.3657L18.5901 21.3771C18.5885 22.5202 17.6925 23.4495 16.5914 23.4495ZM24.2846 11.7187H12.8304C12.4852 10.0869 11.0819 8.86187 9.40842 8.86187C7.7349 8.86187 6.33164 10.0869 5.98643 11.7187H1.71521C1.29974 11.7187 0.962891 12.0685 0.962891 12.4999C0.962891 12.9314 1.29974 13.2812 1.71521 13.2812H5.9868C6.33273 14.9121 7.73786 16.1379 9.40842 16.1379C11.0799 16.1379 12.4844 14.9123 12.8301 13.2812H24.2846C24.7001 13.2812 25.037 12.9314 25.037 12.4999C25.037 12.0685 24.7001 11.7187 24.2846 11.7187ZM11.407 12.4979C11.407 12.5007 11.407 12.5035 11.407 12.5062C11.4037 13.6472 10.5072 14.5754 9.40842 14.5754C8.31122 14.5754 7.41465 13.6485 7.4099 12.5081L7.40976 12.4967C7.4114 11.3536 8.30736 10.4244 9.40842 10.4244C10.509 10.4244 11.4046 11.3528 11.4071 12.4951L11.407 12.4979Z"
                     fill="white" />
                 </svg>
                 <span class="font-bold me-3">All Filter</span>
-                <svg width="13" height="9" viewBox="0 0 13 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="dropdown__arrow transition-all transition-duration" width="13" height="9" viewBox="0 0 13 9" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M11.3296 0.32959L6.49996 5.15921L1.67034 0.32959L0.0795898 1.92034L6.49996 8.34071L12.9203 1.92034L11.3296 0.32959Z"
                     fill="#fff"></path>
@@ -554,7 +563,7 @@
 
               <!-- Filter Dropdown -->
               <div
-                class="filter-dropdown__menu hidden w-full absolute bg-secondary rounded-lg mt-3 text-white border-s border-e border-b border-white border-solid">
+                class="dropdown__menu hidden w-full absolute bg-secondary rounded-lg mt-3 text-white border-s border-e border-b border-white border-solid">
                 <div
                   class="py-2 px-3 border-t border-white border-solid cursor-pointer rounded-t-lg hover:bg-secondary-300 transition duration-200">
                   Filter 1</div>
