--- a/set-voice.html
+++ b/set-voice.html
@@ -15,9 +15,10 @@
     <!-- Header -->
     <header class="py-4 px-5 md:px-10 xl:hidden flex items-center justify-between">
       <a href="/">
-        <img src="/images/logo.svg" alt="Logo" class="relative z-11 w-[9rem] dark:brightness-[1.5]">
+        <img src="/images/logo.svg" alt="Logo" class="relative z-11 w-[9rem] dark:brightness-[2]">
       </a>
-      <button class="sidebar-toggle p-2 dark:text-white hover:bg-gray-200 dark:hover:bg-black transition-all transition-duration-500 rounded focus:outline-none ms-3">
+      <button
+        class="sidebar-toggle p-2 dark:text-white hover:bg-gray-200 dark:hover:bg-black transition-all transition-duration-500 rounded focus:outline-none ms-3">
         <!-- Hamburger Icon -->
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
           stroke-width="2">
@@ -38,7 +39,8 @@
         <div class="flex items-center justify-between p-4 sidebar-header">
           <div class="flex items-center space-x-2">
             <a class="hidden xl:inline" href="index.html">
-              <img src="/images/logo.svg" alt="Logo" class="w-[9rem] sidebar__logo-icon hide-on-collapse dark:brightness-[1.5]">
+              <img src="/images/logo.svg" alt="Logo"
+                class="w-[9rem] sidebar__logo-icon hide-on-collapse dark:brightness-[2]">
               <img class="hidden sidebar__logo-icon hide-on-collapse" src="/images/logo-icon.svg" alt="Logo">
             </a>
           </div>
@@ -63,10 +65,11 @@
         <!-- NAVIGATION -->
         <nav class="flex flex-col px-2 mt-4 text-primary">
 
-          <h6 class="sidebar__menu-text font-bold text-dark dark:text-white ps-3 opacity-50 mb-3 uppercase text-sm">Menu</h6>
+          <h6 class="sidebar__menu-text font-bold text-dark dark:text-white ps-3 opacity-50 mb-3 uppercase text-sm">Menu
+          </h6>
 
           <!-- Home Link -->
-          <a href="index.html" class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3">
+          <a href="/" class="flex items-center px-3 py-2 rounded hover:bg-gray-100 mb-3">
             <!-- Replace with your home icon -->
             <svg width="20" height="20" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g opacity="0.5">
@@ -130,8 +133,10 @@
                 </defs>
               </svg>
 
-              <span class="ml-3 sidebar-text hide-on-collapse flex-1 text-left text-black dark:text-white opacity-50">Settings</span>
-              <svg class="sidebar-arrow" width="13" height="9" viewBox="0 0 13 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <span
+                class="ml-3 sidebar-text hide-on-collapse flex-1 text-left text-black dark:text-white opacity-50">Settings</span>
+              <svg class="sidebar-arrow transition-all transition-duration-500" width="13" height="9" viewBox="0 0 13 9" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M11.3296 0.32959L6.49996 5.15921L1.67034 0.32959L0.0795898 1.92034L6.49996 8.34071L12.9203 1.92034L11.3296 0.32959Z"
                   fill="#a4a4a4" />
@@ -155,6 +160,14 @@
               <a href="voice-collection.html"
                 class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black dark:text-white opacity-50">
                 Voice Collection
+              </a>
+              <a href="account.html"
+                class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black dark:text-white opacity-50">
+                Account
+              </a>
+              <a href="account.html"
+                class="block px-3 py-2 -ml-3 hover:bg-gray-100 rounded gray text-black dark:text-white opacity-50">
+                Account
               </a>
             </div>
           </div>
@@ -207,9 +220,9 @@
     <main class="flex-1 md:mx-auto p-5 md:p-10">
       <!-- Example content header -->
       <header class="lg:mb-6 md:mb-4 mb-2 relative flex justify-end lg:px-4 items-center gap-4">
-        <h2 class="lg:text-3xl text-xl lg:text-center text-primary font-bold w-full">Set Ai Voice</h2>
+        <h1 class="lg:text-3xl text-xl lg:text-center text-primary font-bold w-full">Set Ai Voice</h1>
         <span
-            class="bg-secondary lg:px-[110px] px-7 py-1 lg:py-2 text-white rounded-full profile-select-next cursor-pointer opacity-0">Publish</span>
+          class="bg-secondary lg:px-[110px] px-7 py-1 lg:py-2 text-white rounded-full profile-select-next cursor-pointer opacity-0">Publish</span>
       </header>
 
       <!-- Cards Grid -->
@@ -217,8 +230,10 @@
 
         <!-- Card -->
         <div
-          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative">
+          <div
+            class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
+          </div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/grace-img.svg"
               alt="content">
@@ -255,8 +270,10 @@
 
         <!-- Card -->
         <div
-          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative">
+          <div
+            class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
+          </div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/Leslie-img.svg"
               alt="content">
@@ -290,8 +307,10 @@
 
         <!-- Card -->
         <div
-          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative">
+          <div
+            class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
+          </div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/Sydney-img.svg"
               alt="content">
@@ -326,8 +345,10 @@
 
         <!-- Card -->
         <div
-          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative">
+          <div
+            class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
+          </div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/Kai-img.svg"
               alt="content">
@@ -362,8 +383,10 @@
 
         <!-- Card -->
         <div
-          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative">
+          <div
+            class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
+          </div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/sean-img.svg"
               alt="content">
@@ -398,8 +421,10 @@
 
         <!-- Card -->
         <div
-          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative">
+          <div
+            class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
+          </div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/rob.svg" alt="content">
             <h2 class="text-2xl font-semibold title-font text-primary">Rob</h2>
@@ -433,8 +458,10 @@
 
         <!-- Card -->
         <div
-          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative">
+          <div
+            class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
+          </div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/tina-img.svg"
               alt="content">
@@ -469,8 +496,10 @@
 
         <!-- Card -->
         <div
-          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative hover:translate-x-[3px]">
-          <div class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3"></div>
+          class="hover:bg-[#0A574E] bg-gray px-3 py-6 flex flex-col items-center justify-between gap-2 rounded-xl hover:text-white transition duration-500 profile-card h-full relative">
+          <div
+            class="profile-card__select w-4 h-4 border-2 border-black rounded-lg cursor-pointer transition duration-500 hover:scale-125 absolute top-3 start-3">
+          </div>
           <div class="text-center">
             <img class="rounded mx-auto block mb-2 w-20 object-cover object-center" src="/images/fionna-img.svg"
               alt="content">
