Accounts Page Updates

--- a/sign-up.html
+++ b/sign-up.html
@@ -55,7 +55,7 @@
           <div class="relative">
             <input type="password" name="password" id="password1" placeholder="Password"
               autocomplete="current-password" required
-              class="w-full border border-[#1AFFE459] px-3 rounded py-4 bg-[#F8F8F8] focus:outline-none focus:ring-2 focus:ring-teal-200">
+              class="w-full border border-[#1AFFE459] px-3 py-2 md:py-4 rounded bg-[#F8F8F8] focus:outline-none focus:ring-2 focus:ring-teal-200">
             <div class="cursor-pointer absolute end-0 me-2 top-[50%] translate-y-[-50%] toggle-password">
               <!-- Eye Icon (visible by default) -->
               <svg class="eye-icon" width="27" height="28" viewBox="0 0 35 36" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -76,7 +76,7 @@
           <div class="relative">
             <input type="password" name="password" id="password1" placeholder="Password"
               autocomplete="current-password" required
-              class="w-full border border-[#1AFFE459] px-3 rounded py-4 bg-[#F8F8F8] focus:outline-none focus:ring-2 focus:ring-teal-200">
+              class="w-full border border-[#1AFFE459] px-3 py-2 md:py-4 rounded bg-[#F8F8F8] focus:outline-none focus:ring-2 focus:ring-teal-200">
             <div class="cursor-pointer absolute end-0 me-2 top-[50%] translate-y-[-50%] toggle-password">
               <!-- Eye Icon (visible by default) -->
               <svg class="eye-icon" width="27" height="28" viewBox="0 0 35 36" fill="none" xmlns="http://www.w3.org/2000/svg">
