--- a/voice-creations.html
+++ b/voice-creations.html
@@ -259,20 +259,20 @@
         <!-- Example form content (use your own form) -->
         <section class="rounded space-y-4 relative">
           <div class="">
-            <label for="voiceName" class="block font-bold text-lg mb-2 text-primary">Name of AI Voice</label>
-            <input type="text" id="voiceName" class="w-full border border-[#1AFFE459] px-3 rounded py-4 bg-[#F8F8F8]
+            <label for="voiceName" class="block font-bold md:text-lg mb-2 text-primary">Name of AI Voice</label>
+            <input type="text" id="voiceName" class="w-full border border-[#1AFFE459] px-3 py-2 md:py-4 rounded bg-[#F8F8F8]
                            focus:outline-none focus:ring-2 focus:ring-teal-200" placeholder="Enter AI Voice name" />
           </div>
 
           <div>
-            <label for="voiceID" class="block font-bold text-lg mb-2 text-primary">Voice ID for AI Voice</label>
-            <input type="text" id="voiceID" class="w-full border border-[#1AFFE459] px-3 rounded py-4 bg-[#F8F8F8]
+            <label for="voiceID" class="block font-bold md:text-lg mb-2 text-primary">Voice ID for AI Voice</label>
+            <input type="text" id="voiceID" class="w-full border border-[#1AFFE459] px-3 py-2 md:py-4 rounded bg-[#F8F8F8]
                            focus:outline-none focus:ring-2 focus:ring-teal-200" placeholder="Enter Voice ID" />
           </div>
 
           <div>
-            <label for="openingRemark" class="block font-bold text-lg mb-2 text-primary">Opening Remark</label>
-            <input type="text" id="voiceName" class="w-full border border-[#1AFFE459] px-3 rounded py-5 bg-[#F8F8F8]
+            <label for="openingRemark" class="block font-bold md:text-lg mb-2 text-primary">Opening Remark</label>
+            <input type="text" id="voiceName" class="w-full border border-[#1AFFE459] px-3 py-2 md:py-5 rounded bg-[#F8F8F8]
                          focus:outline-none focus:ring-2 focus:ring-teal-200"
               placeholder="This is the exact phrase that the AI will say first when answering the call" />
             <span class="text-gray text-sm">Note: In the instructions, [callerPhoneNumber] can be used to refer to
@@ -280,10 +280,10 @@
           </div>
 
           <div>
-            <label for="openingRemark" class="block font-bold text-lg mb-2 text-primary">Instruction for AI
+            <label for="openingRemark" class="block font-bold md:text-lg mb-2 text-primary">Instruction for AI
               Voice</label>
             <div class="relative">
-              <input type="text" id="voiceName" class="w-full border border-[#1AFFE459] px-3 rounded py-5 bg-[#F8F8F8]
+              <input type="text" id="voiceName" class="w-full border border-[#1AFFE459] px-3 py-2 md:py-5 rounded bg-[#F8F8F8]
                                focus:outline-none focus:ring-2 focus:ring-teal-200"
                 placeholder="Tell the AI what you want it to do, how to do it, when to do it, etc..." />
               <div class="absolute -right-10 top-4 cursor-pointer">
@@ -311,16 +311,16 @@
           </div>
 
           <div>
-            <label for="openingRemark" class="block font-bold text-lg mb-2 text-primary">Description of AI Voice</label>
-            <input type="text" id="voiceName" class="w-full border border-[#1AFFE459] px-3 rounded py-5 bg-[#F8F8F8]
+            <label for="openingRemark" class="block font-bold md:text-lg mb-2 text-primary">Description of AI Voice</label>
+            <input type="text" id="voiceName" class="w-full border border-[#1AFFE459] px-3 py-2 md:py-5 rounded bg-[#F8F8F8]
                            focus:outline-none focus:ring-2 focus:ring-teal-200"
               placeholder="ID of the AI Voice to be used" />
           </div>
 
           <div>
-            <label for="openingRemark" class="block font-bold text-lg mb-2 text-primary">Helium form for AI Voice
+            <label for="openingRemark" class="block font-bold md:text-lg mb-2 text-primary">Helium form for AI Voice
               (Optional)</label>
-            <select class="w-full border border-[#1AFFE459] px-3 rounded py-5 bg-[#F8F8F8]
+            <select class="w-full border border-[#1AFFE459] px-3 py-2 md:py-5 rounded bg-[#F8F8F8]
                            focus:outline-none focus:ring-2 focus:ring-teal-200" name="" id="">
               <option value="" class="w-14">Select the active Helium Form where the AI will save collected information.
                 Ensure your instructions specify when to save.</option>
