Payment Method added to Account Page + Datatable Basic Setup

--- a/call-logs.html
+++ b/call-logs.html
@@ -283,7 +283,7 @@
 
                 <!-- Table -->
                 <div class="overflow-x-auto rounded-lg">
-                    <table class="w-full mx-auto text-primary text-sm text-center whitespace-nowrap">
+                    <table class="table w-full mx-auto text-primary text-sm text-center whitespace-nowrap">
                         <thead>
                             <tr class="bg-primary text-white">
                                 <th class="py-2 px-3 border-r border-gray rounded-t-lg rounded-e-none">Time</th>
