--- a/voice-collection.html
+++ b/voice-collection.html
@@ -233,7 +233,7 @@
             </header>
             <div class="mt-6 overflow-x-auto rounded-t-lg">
 
-                <table class="w-full mx-auto text-primary text-sm text-center whitespace-nowrap">
+                <table class="table w-full mx-auto text-primary text-sm text-center whitespace-nowrap">
                     <thead>
                         <tr class="bg-primary text-white">
                             <th class="py-2 px-3 border-r border-gray rounded-t-lg rounded-e-none">Voice Name</th>
