--- a/voice-creations.html
+++ b/voice-creations.html
@@ -256,7 +256,7 @@
           </div>
         </header>
 
-        <!-- Example form content (use your own form) -->
+        <!-- Section -->
         <section class="rounded space-y-4 relative">
           <div class="">
             <label for="voiceName" class="block font-bold md:text-lg mb-2 text-primary">Name of AI Voice</label>
