--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
       </header>
 
-      <!-- Example form content (use your own form) -->
+      <!-- Section -->
       <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
 
         <!-- Box -->
@@ -308,7 +308,7 @@
           <!-- Card Header -->
 
           <div class="overflow-x-auto rounded-t-lg">
-            <table class="w-full mx-auto text-primary text-sm text-center whitespace-nowrap">
+            <table class="table w-full mx-auto text-primary text-sm text-center whitespace-nowrap">
               <thead>
                 <tr class="bg-primary text-white">
                   <th class="py-2 px-3 border-r border-gray rounded-t-lg rounded-e-none">Voice Name</th>
@@ -542,11 +542,11 @@
             <h2 class="text-xl font-bold text-primary">Call Logs</h2>
 
             <!-- Filters -->
-            <div class="relative filter-dropdown">
+            <div class="relative filter-dropdown z-[3]">
 
               <!-- Filter Button -->
               <div
-                class="dropdown__button bg-secondary text-sm text-white py-2 px-3 flex justify-between items-center rounded-full gap-4 cursor-pointer ">
+                class="dropdown__button bg-secondary text-sm text-white py-2 px-3 flex justify-between items-center rounded-full gap-4 cursor-pointe">
                 <svg width="20" height="19" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M1.71521 4.40708H13.1694C13.5147 6.03887 14.9179 7.26392 16.5914 7.26392C18.265 7.26392 19.6682 6.03892 20.0134 4.40708H24.2846C24.7001 4.40708 25.037 4.05728 25.037 3.62583C25.037 3.19438 24.7001 2.84458 24.2846 2.84458H20.0131C19.6672 1.21362 18.262 -0.012207 16.5914 -0.012207C14.92 -0.012207 13.5155 1.21343 13.1697 2.84458H1.71521C1.29974 2.84458 0.962891 3.19438 0.962891 3.62583C0.962891 4.05728 1.29974 4.40708 1.71521 4.40708ZM14.5928 3.62788C14.5928 3.6251 14.5929 3.62227 14.5929 3.61948C14.5962 2.47852 15.4927 1.55034 16.5914 1.55034C17.6886 1.55034 18.5852 2.47725 18.59 3.61768L18.5901 3.62915C18.5884 4.77207 17.6924 5.70146 16.5914 5.70146C15.4909 5.70146 14.5953 4.773 14.5928 3.63076L14.5928 3.62788ZM24.2846 20.5927H20.0131C19.6671 18.9618 18.262 17.7359 16.5914 17.7359C14.92 17.7359 13.5155 18.9616 13.1697 20.5927H1.71521C1.29974 20.5927 0.962891 20.9424 0.962891 21.3739C0.962891 21.8054 1.29974 22.1552 1.71521 22.1552H13.1694C13.5147 23.787 14.9179 25.012 16.5914 25.012C18.265 25.012 19.6682 23.787 20.0134 22.1552H24.2846C24.7001 22.1552 25.037 21.8054 25.037 21.3739C25.037 20.9424 24.7001 20.5927 24.2846 20.5927ZM16.5914 23.4495C15.4909 23.4495 14.5953 22.521 14.5928 21.3788L14.5928 21.376C14.5928 21.3731 14.5929 21.3704 14.5929 21.3676C14.5962 20.2266 15.4927 19.2984 16.5914 19.2984C17.6886 19.2984 18.5852 20.2253 18.59 21.3657L18.5901 21.3771C18.5885 22.5202 17.6925 23.4495 16.5914 23.4495ZM24.2846 11.7187H12.8304C12.4852 10.0869 11.0819 8.86187 9.40842 8.86187C7.7349 8.86187 6.33164 10.0869 5.98643 11.7187H1.71521C1.29974 11.7187 0.962891 12.0685 0.962891 12.4999C0.962891 12.9314 1.29974 13.2812 1.71521 13.2812H5.9868C6.33273 14.9121 7.73786 16.1379 9.40842 16.1379C11.0799 16.1379 12.4844 14.9123 12.8301 13.2812H24.2846C24.7001 13.2812 25.037 12.9314 25.037 12.4999C25.037 12.0685 24.7001 11.7187 24.2846 11.7187ZM11.407 12.4979C11.407 12.5007 11.407 12.5035 11.407 12.5062C11.4037 13.6472 10.5072 14.5754 9.40842 14.5754C8.31122 14.5754 7.41465 13.6485 7.4099 12.5081L7.40976 12.4967C7.4114 11.3536 8.30736 10.4244 9.40842 10.4244C10.509 10.4244 11.4046 11.3528 11.4071 12.4951L11.407 12.4979Z"
@@ -587,7 +587,7 @@
 
           <!-- Table -->
           <div class="overflow-x-auto rounded-t-lg">
-            <table class="w-full mx-auto text-primary text-sm text-center whitespace-nowrap">
+            <table class="table w-full mx-auto text-primary text-sm text-center whitespace-nowrap">
               <thead>
                 <tr class="bg-primary text-white">
                   <th class="py-2 px-3 border-r border-gray rounded-t-lg rounded-e-none">Time</th>
@@ -641,7 +641,7 @@
                 </tr>
                 <tr class="bg-[#14B8A640] border-b border-r">
                   <td class="px-3 py-2 border-r border-primary text-dark dark:text-white">12:00:00 PM</td>
-                  <td class="px-3 py-2 border-r border-primary">001</td>
+                  <td class="px-3 py-2 border-r border-primary">002</td>
                   <td class="px-3 py-2 border-r border-primary">12:34 minutes</td>
                   <td class="p-2 border-r border-primary">
                     <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
@@ -680,7 +680,7 @@
                 </tr>
                 <tr class="bg-white border-b border-r">
                   <td class="px-3 py-2 border-r border-primary text-dark dark:text-white">12:00:00 PM</td>
-                  <td class="px-3 py-2 border-r border-primary">001</td>
+                  <td class="px-3 py-2 border-r border-primary">003</td>
                   <td class="px-3 py-2 border-r border-primary">12:34 minutes</td>
                   <td class="p-2 border-r border-primary">
                     <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
@@ -719,7 +719,7 @@
                 </tr>
                 <tr class="bg-[#14B8A640] border-b border-r">
                   <td class="px-3 py-2 border-r border-primary text-dark dark:text-white">12:00:00 PM</td>
-                  <td class="px-3 py-2 border-r border-primary">001</td>
+                  <td class="px-3 py-2 border-r border-primary">004</td>
                   <td class="px-3 py-2 border-r border-primary">12:34 minutes</td>
                   <td class="p-2 border-r border-primary">
                     <a class="bg-secondary py-1 px-2 rounded-lg gap-2 inline-flex items-center justify-center min-w-[7.7rem]"
